refactor:新增webpack 插件

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <div id="root"></div>
-    <script src="./js/test.js"></script>
+    <!-- <script src="./js/test.js"></script> -->
+    <!--SetScriptTimestampPlugin inset script-->
 </body>
 
 </html>
